usearauthantication ui changes

--- a/frontend/src/app/PasswordChange/ChangePassword.css
+++ b/frontend/src/app/PasswordChange/ChangePassword.css
@@ -1,56 +1,90 @@
-/* ChangePassword.css */
 .container {
-  
-    max-width: 300px;
-    margin-left: 600px;
-    margin-top: 180px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    background-color: #ffffff52;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  h1 {
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 25px;
-    font-weight: bold;
-  }
-  
-  form div {
-    margin-bottom: 15px;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 5px;
-    
-  }
-  
-  input {
-    width: calc(100% - 20px);
-    padding: 10px;
-    margin: 0;
-    border: 1px solid #ccccccf3;
-    border-radius: 5px;
-    box-sizing: border-box;
-    color: black;
-    width: 100%;
-  }
-  
-  button {
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: white;
+}
+
+.formWrapper {
+  background: black;
+  color: white;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 2rem;
+  width: 100%;
+  max-width: 360px;
+}
+
+.title {
+  margin-bottom: 20px;
+  font-size: 24px;
+  text-align: center;
+  color: white;
+}
+
+.formContent {
+  display: flex;
+  flex-direction: column;
+}
+
+.inputGroup {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.inputWithButton {
+  display: flex;
+  align-items: center;
+}
+
+.input {
+  flex: 1;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  color: black;
+}
+
+.errorInput {
+  border-color: red;
+}
+
+.error {
+  color: red;
+  font-size: 14px;
+}
+
+.submitButton {
+  padding: 10px 20px;
+  background: linear-gradient(90deg, #007bff9f, #800080);
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  width: 100%;
+  border-radius: 4px;
+}
+
+.loginLink {
+  margin-top: 20px;
+  font-size: 14px;
+  text-align: center;
+}
+
+.timer {
+  margin-top: 20px;
+  font-size: 14px;
+  color: #666;
+  text-align: center;
+}
+
+.resendButton {
+  background: linear-gradient(90deg, #007bff9f, #800080);
+  cursor: pointer;
+  text-align: center;
+  margin-top: 10px;
+  color: white;
+  padding: 5px;
+  border-radius: 4px;
+}
