--- a/frontend-userauthentication/src/app/SignIn/ForgotPassword/ForgotPassword.module.css
+++ b/frontend-userauthentication/src/app/SignIn/ForgotPassword/ForgotPassword.module.css
@@ -8,8 +8,9 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  font-family: Arial, Helvetica, sans-serif; /* Set the font for the entire container */
+  font-family: Arial, Helvetica, sans-serif;
 }
+
 .main {
   padding: 0;
   display: flex;
@@ -19,6 +20,7 @@
   padding-top: 50px;
   padding-bottom: 50px;
 }
+
 .card {
   background-color: black;
   color: white;
@@ -34,50 +36,68 @@
   justify-content: center;
 }
 
-  
-  .title {
-    font-size: 1.2rem; /* Adjusted for a balanced header size */
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-  .button {
-    padding: 0.65rem;
-    width: 100%;
-    
-    border-radius: 2px;
-    background: linear-gradient(90deg, #007bff9f, #800080);
-    color: white;
-    font-size: 0.8rem;
-    cursor: pointer;
-    margin-bottom: 0.5rem;
-    font-family: Arial, Helvetica, sans-serif; /* Consistent font for buttons */
-  }.form {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-  }
-  
-  .formGroup {
-    margin-bottom: 1rem;
-  }
-  
-  .formGroup label {
-    display: block;
-    margin-bottom: 0.5rem;
-    font-size: 1rem; /* Consistent label font size */
-  }
-  
-  .formGroup input {
-    width: 100%;
-    padding: 0.5rem;
-    
-    border-radius: 2px;
-    color: black;
-    font-size: 0.75rem; /* Match input font size to label size */
-    font-family: Arial, Helvetica, sans-serif; /* Ensure consistency in font */
-  }
-  
-  .formGroup input::placeholder {
-    color: #888;
-    font-size: 0.75rem; /* Slightly smaller placeholder text */
-  }
+.title {
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.button {
+  padding: 0.65rem;
+  width: 100%;
+  border-radius: 2px;
+  background: linear-gradient(90deg, #007bff9f, #800080);
+  color: white;
+  font-size: 0.8rem;
+  cursor: pointer;
+  margin-bottom: 0.5rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.formGroup {
+  margin-bottom: 1rem;
+}
+
+.formGroup label {
+  display: block;
+  margin-bottom: 0.5rem;
+  font-size: 1rem;
+}
+
+.formGroup input {
+  width: 100%;
+  padding: 0.5rem;
+  border-radius: 2px;
+  color: black;
+  font-size: 0.75rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.formGroup input::placeholder {
+  color: #888;
+  font-size: 0.75rem;
+}
+
+.passwordWrapper {
+  position: relative;
+}
+
+.passwordInput {
+  width: 100%;
+  padding-right: 2.5rem; /* Make room for the eye icon */
+}
+
+.eyeIcon {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  cursor: pointer;
+  color:black;
+}
